# VTO

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  MASTER_BLUEPRINT.md  Makefile  QUICKSTART.md  README.md  SECURITY.md  package-lock.json  package.json  pnpm-workspace.yaml  render.yaml  turbo.json
ai/inference_gateway/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-idm-vton.txt  requirements.txt  setup-idm-vton.sh
ai/inference_gateway/app/: config.py  logging.py  main.py  standalone_server.py
ai/inference_gateway/app/api/: routes.py
ai/inference_gateway/app/core/: device.py  storage.py
ai/inference_gateway/app/digital_human/: __init__.py  body_extraction.py  capture_validation.py  measurement_extraction.py  models.py  pipeline.py  profile_builder.py
ai/inference_gateway/app/garment_intelligence/: __init__.py  models.py  pipeline.py
ai/inference_gateway/app/jobs/: processor.py
ai/inference_gateway/app/renderers/: __init__.py  base.py  factory.py  mock.py
ai/inference_gateway/app/renderers/idm_vton/: compat.py  config.py  model.py  renderer.py
ai/inference_gateway/app/renderers/idm_vton/pipeline/: __init__.py  attention_processor.py  tryon_pipeline.py
ai/inference_gateway/scripts/: benchmark.py
ai/inference_gateway/tests/: conftest.py  test_api.py  test_config.py  test_device.py  test_idm_vton_integration.py  test_idm_vton_renderer.py  test_mock_renderer.py  test_renderer_interface.py
ai/inference_gateway/tests/fixtures/: README.md
docs/: ai-engine-architecture.md  decision-register.md  (+3 more)
(+248 files in other folders)
